# term_project

./: .gitignore  Makefile  README.md  parking.db  pyproject.toml
notebooks/: medium.ipynb
src/: app.py  test.py
