
[tool.poetry]
name = "term_project"
version = "0.1.0"
description = ""
authors = ["Luis"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.2"
hydra-core = "^1.1.1"
pytesseract = "^0.3.10"
imutils = "^0.5.4"
opencv-python = "^4.9.0.80"
easyocr = "^1.7.1"
jupyterlab = "^4.1.6"
matplotlib = "^3.8.4"
nbstripout = "^0.7.1"
flask = "^3.0.3"
flask-restful = "^0.3.10"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.lint.mccabe]
max-complexity = 10
